tentative de résolution du bug au scroll en version mobile -> 1.0

--- a/public/src/style/style.css
+++ b/public/src/style/style.css
@@ -30,9 +30,14 @@
   }
 }
 
+body {
+  height: -webkit-fill-available;
+}
+
 html {
   font-family: "Roboto", sans-serif;
   background-color: var(--dark-blue);
+  height: -webkit-fill-available;
 }
 
 html.scrollDisable {
